# virtual-machines-cub

hw2/: CMakeLists.txt  README.md  bytefile.c  byterun.c  interpreter.c  interpreter.cpp  interpreter.h  main.c  main.cpp  save_run.sh
hw2-kotlin/: build.gradle.kts  settings.gradle.kts  test001.bc
hw2-kotlin/gradle/wrapper/: gradle-wrapper.properties
hw2-kotlin/regression/: Sort.bc  Sort.lama  genBytecode.sh  test034.bc  test036.bc  test040.bc  test042.bc  test045.bc  test046.bc  test050.bc  test059.bc  test063.bc  test072.bc  test073.bc  test074.bc  test077.bc  test078.bc  test080.bc  test081.bc  test082.bc  test088.bc  test089.bc  test094.bc  test095.bc  test097.bc  test100.bc  test101.bc  test102.bc  test104.bc  test106.bc  test112.bc
hw2-kotlin/src/main/kotlin/: Instruction.kt  Main.kt
hw2-kotlin/src/main/kotlin/decompiler/: Bytecode.kt  Decompiler.kt  Instruction.kt
hw2-kotlin/src/main/kotlin/interpreter/: Interpreter.kt
hw2-kotlin/src/test/kotlin/: Test.kt
hw2-kotlin/src/test/resources/: test002.bc
hw2/regression/: test000.lama  test006.input  test029.bc  test041.bc  test079.bc  test082.lama  test083.bc  test084.bc  test085.bc  test086.bc  test090.bc  test091.bc  test092.bc  test093.bc  test096.bc  test098.bc  test099.bc  test103.bc  test105.bc  test107.bc  test801.bc  test802.bc
hw2/runtime/: CMakeLists.txt  gc.c  runtime.c  runtime.h  runtime_common.h
